testsuite/resolution/compile-fail/module.verona
// Copyright (c) Contributers to Project Verona. All rights reserved.
// Licensed under the MIT License.

// Reported errors should point to the proper source location.
use "module/child.verona"
// CHECK-L: child.verona:${LINE:-1}:8: error: Cannot find value for symbol 'T'
